
[package]
name = "possessive"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["file_watcher"] }
bevy_ecs_tiled = "0.9"
bevy_mod_aseprite = "0.10"

[features]
default = []

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"
