
[package]
name = "possessive"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
noise = "0.8"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
image = "0.25"
pathfinding = "4"
bitvec = "1.0"
glam = "0.29"
thiserror = "1.0"

[features]
default = []

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"
